--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <main class="main">
         <div class="board">
-            
+
         </div>
 
         <table class="game_summary">
@@ -52,6 +52,32 @@
 
     <footer>
     </footer>
+
+
+    <template id="bishop">
+
+    </template>
+
+    <template id="king">
+
+    </template>
+
+    <template id="knight">
+
+    </template>
+
+    <template id="pawn">
+
+    </template>
+
+    <template id="queen">
+
+    </template>
+
+    <template id="rook">
+
+    </template>
+
 
     <script type="text/javascript" src="js/app.js"></script>
 </body>
