Début de la phase de code logique

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echecs</title>
+    <title>Échecs</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
@@ -23,32 +23,7 @@
         </div>
 
         <table class="game_summary">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nom de la pièce</th>
-                    <th>Couleur</th>
-                    <th>Etat</th>
-                    <th>Position en X</th>
-                    <th>Position en Y</th>
-                    <th>Couleur de la case</th>
-                    <th>Pion spécial</th>
-                    <th>Image</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
+
         </table>
     </main>
 
