Update du Readme, et séparation de concept côté front. App.js devient proxy

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,8 @@
 
 
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/createBoardandTable.js"></script>
+    <script type="text/javascript" src="js/casesSelectionandMoves.js"></script>    
 </body>
 
 </html>
