Petite amélioration avec Beautify

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
 
     <main class="main">
         <!-- Boutton provisoire pour les tests sans paramètres de partie, sans début ni fin (SURTOUT sans la fin en fait) -->
-        <button id="testing-reset-button" style="position: relative; top: 40px; left: 350px; padding: 5px; background-color: blueviolet; color: #fff;">DEV : RESET</button>
+        <button id="testing-reset-button"
+            style="position: relative; top: 40px; left: 350px; padding: 5px; background-color: blueviolet; color: #fff;">DEV
+            : RESET</button>
         <!-- La div où seront créer tous les container et leur sous-div dedans, notre échiquier en somme -->
         <div class="board">
 
@@ -96,7 +98,7 @@
 
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/createBoardandTable.js"></script>
-    <script type="text/javascript" src="js/casesSelectionandMoves.js"></script>    
+    <script type="text/javascript" src="js/casesSelectionandMoves.js"></script>
 </body>
 
 </html>
